FIX: hide scrollbar

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -34,6 +34,17 @@
   overflow: scroll;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.chat__body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.chat__body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .chat__message {
   position: relative;
   font-size: 16px;
